src/components/pipelines-overview/PipelinesOverview.scss
.card-border {
  border: var(--pf-t--global--border--width--sm) solid
    var(--pf-t--global--border--color--default);
}

.pipelines-overview__cards {
  margin-top: var(--pf-t--global--spacer--lg);
  margin-bottom: var(--pf-t--global--spacer--lg);
}

.pipeline-overview__pipelinerun-status-card {
  &__title {
    padding-bottom: 0 !important;
  }

  &__list-page {
    padding-bottom: 0 !important;
  }

  &__donut-chart-div {
    height: 200px;
    float: left;
  }

  &__bar-chart-div {
    height: 200px;
  }
}

.project-dropdown-label {
  display: block;

  &__flex {
    margin-left: var(--pf-t--global--spacer--md);
  }
}

.pipeline-overview__duration-card {
  &__grid {
    margin-bottom: var(--pf-t--global--spacer--sm);
  }

  &__icon {
    margin-right: var(--pf-t--global--spacer--sm);
  }

  &__info-icon {
    margin-right: var(--pf-t--global--spacer--sm);
    color: var(--pf-t--global--color--brand--default);
  }

  &__value {
    color: var(--pf-t--global--color--brand--default);
  }
}

.pipeline-overview__totals-card {
  margin-left: var(--pf-t--global--spacer--md);
  margin-right: var(--pf-t--global--spacer--md);

  &__grid {
    margin-bottom: var(--pf-t--global--spacer--sm);
  }

  &__label {
    margin-right: var(--pf-t--global--spacer--sm);
    height: var(--pf-t--global--spacer--md);
  }

  &__repo-label {
    margin-right: var(--pf-t--global--spacer--md);
    height: var(--pf-t--global--spacer--md);
  }

  &__icon {
    margin-right: var(--pf-t--global--spacer--md);
    margin-left: var(--pf-t--global--spacer--sm);
  }

  &__value {
    color: var(--pf-t--global--color--brand--default);
  }
}

.pipeline-overview__number-of-plr-card {
  .pf-v6-c-card__title {
    padding-bottom: 0;
  }

  &__title {
    padding-bottom: 0 !important;
  }

  &__body {
    padding: 0;
    height: 145px;
    width: 530px;
  }

  &__bar-chart-div {
    height: 145px;
  }

  &__loading {
    padding-left: var(--pf-t--global--spacer--md);
  }
}

.pipeline-overview__listpage {
  &__button {
    float: right;
  }

  &__grid {
    margin-bottom: var(--pf-t--global--spacer--md);
  }

  &__table {
    border-top: inset;
  }

  &__griditem {
    display: flex;
  }
}

.pipeline-overview__dropdown-button {
  max-width: 280px !important; // allow truncation
  min-width: 100px;
}

.pipeline-overview__search-input {
  height: fit-content;
  width: 220px;
  margin-left: var(--pf-t--global--spacer--sm);
}

.pipeline-overview__duration-total-plr-grid {
  padding-left: var(--pf-t--global--spacer--md);
  padding-right: var(--pf-t--global--spacer--md);
  padding-top: var(--pf-t--global--spacer--md);
  padding-bottom: var(--pf-t--global--spacer--md);
}

.pipelines-metrics__background {
  background-color: var(--pf-t--global--background--color--secondary--default);
  padding-left: var(--pf-t--global--spacer--md);
  padding-right: var(--pf-t--global--spacer--md);
  padding-top: var(--pf-t--global--spacer--md);
  padding-bottom: var(--pf-t--global--spacer--sm);
}

.k8s-overview-info-alert {
  margin-bottom: var(--pf-t--global--spacer--md);
  margin-left: var(--pf-t--global--spacer--md);
  margin-right: var(--pf-t--global--spacer--md);
}

